<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cover"
    tools:context=".MainList">

    <LinearLayout
        android:background="#36BA3C"
        android:id="@+id/panel"
        android:weightSum="16"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnBack2"
            android:src="@drawable/ic_baseline_navigate_before_24"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:contentDescription="@string/go_back"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="2" />

        <TextView
            android:layout_gravity="center_vertical"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="11"
            android:text="@string/product_list" />

        <FrameLayout
            android:id="@+id/btnCart"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:contentDescription="@string/shopping_cart"
            android:layout_height="match_parent">

        <ImageView
            android:id="@+id/cartButton"
            android:src="@drawable/ic_baseline_shopping_cart_24"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/shopping_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <com.nex3z.notificationbadge.NotificationBadge
                android:id="@+id/badge"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignTop="@id/cartButton"
                android:layout_marginLeft="10dp"
                app:nbMaxTextLength="2" />
        </FrameLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_productes"
        android:padding="8dp"
        android:layout_below="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bottom_bar_shape"
        android:elevation="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">


        <ImageButton
            android:id="@+id/homeBtn2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="5dp"
            android:background="@android:color/white"
            android:padding="15dp"
            android:src="@drawable/ic_baseline_person_24"
            android:contentDescription="@string/navigation_profile_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
            android:id="@+id/searchBtn2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:layout_marginStart="52dp"
            android:background="@android:color/white"
            android:padding="15dp"
            android:src="@drawable/ic_baseline_shopping_bag_24"
            android:contentDescription="@string/navigation_products_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
            android:id="@+id/addBtn2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:background="@android:color/white"
            android:padding="15dp"
            android:src="@drawable/ic_baseline_shopping_cart_24"
            android:contentDescription="@string/navigation_cart_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </LinearLayout>


</RelativeLayout>